Init Taiga UI & header

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,4 @@
-<mentor-management-system-nx-welcome></mentor-management-system-nx-welcome>
+<mentor-management-system-header></mentor-management-system-header>
+<tui-root>
+  <p>Body</p>
+</tui-root>
