Add Login function (WIP)

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,4 +1,1 @@
-<mentor-management-system-header></mentor-management-system-header>
-<tui-root>
-  <mentor-management-system-mentor-list></mentor-management-system-mentor-list>
-</tui-root>
+<router-outlet></router-outlet>
