Add logout button function: navigation, clear data

--- a/apps/frontend/src/app/header/header.component.html
+++ b/apps/frontend/src/app/header/header.component.html
@@ -1,10 +1,2 @@
 <h1>Mentor Management System</h1>
-<button
-  (click)="onLogout()"
-  iconRight="tuiIconLogoutLarge"
-  size="m"
-  tuiButton
-  type="button"
->
-  Logout
-</button>
+<mentor-management-system-logout-button></mentor-management-system-logout-button>
