Refactoir user / auth store

--- a/libs/auth/src/lib/components/logout-button/logout-button.component.html
+++ b/libs/auth/src/lib/components/logout-button/logout-button.component.html
@@ -1,5 +1,5 @@
 <button
-  (click)="this.userFacade.logout()"
+  (click)="this.authFacade.logout()"
   iconRight="tuiIconLogoutLarge"
   size="m"
   tuiButton
