--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<mentor-management-system-header></mentor-management-system-header>
+<tui-root>
+  <router-outlet></router-outlet>
+</tui-root>
