--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -1,12 +1,7 @@
 mentor-management-system-header {
-  height: 4.5rem;
+  height: 4rem;
 }
 
 tui-root {
-  position: fixed;
-  top: 4.5rem;
-  left: 0;
-  right: 0;
-
-  min-height: calc(100% - 4.5rem);
+  height: calc(100% - 4rem);
 }
