--- a/libs/feature/src/lib/components/student-list/student-list.component.html
+++ b/libs/feature/src/lib/components/student-list/student-list.component.html
@@ -1,11 +1,16 @@
 <div class="tui-container tui-container_adaptive tui-space_vertical-4">
   <span class="tui-text_h4">Student List</span>
   <div class="tui-row tui-row_adaptive tui-space_top-2">
+    <mentor-management-system-add-new-button
+      *ngIf="canEdit"
+      class="tui-col_lg-3 tui-col_md-4 tui-col_xs-6 tui-space_vertical-2"
+    ></mentor-management-system-add-new-button>
     <mentor-management-system-user-card
       *ngFor="
         let student of userFacade.students$ | async;
         trackBy: utils.trackByStudent
       "
+      [canEdit]="canEdit"
       [user]="student"
       class="tui-col_lg-3 tui-col_md-4 tui-col_xs-6 tui-space_vertical-2"
     >
