--- a/libs/feature/src/lib/components/mentor-list/mentor-list.component.html
+++ b/libs/feature/src/lib/components/mentor-list/mentor-list.component.html
@@ -3,7 +3,7 @@
   <div class="tui-row tui-row_adaptive tui-space_top-2">
     <mentor-management-system-add-new-button
       *ngIf="canEdit"
-      (new)="onNewMentor()"
+      (new)="openNewDialog()"
       class="tui-col_lg-3 tui-col_md-4 tui-col_xs-6 tui-space_vertical-2"
     ></mentor-management-system-add-new-button>
     <mentor-management-system-user-card
