--- a/libs/feature/src/lib/components/dumb/user-card/user-card.component.html
+++ b/libs/feature/src/lib/components/dumb/user-card/user-card.component.html
@@ -8,7 +8,7 @@
       size="xs"
       tuiButton
       type="button"
-      (click)="userDelete.emit(user.id)"
+      (click)="userEdit()"
     >
       Edit
     </button>
