--- a/libs/feature/src/lib/components/mentor-list/mentor-list.component.html
+++ b/libs/feature/src/lib/components/mentor-list/mentor-list.component.html
@@ -13,6 +13,7 @@
       "
       [user]="mentor"
       [canEdit]="canEdit"
+      (userDelete)="confirmDeleteDialog(mentor)"
       class="tui-col_lg-3 tui-col_md-4 tui-col_xs-6 tui-space_vertical-2"
     >
     </mentor-management-system-user-card>
